--- a/package.json
+++ b/package.json
@@ -4,16 +4,25 @@
   "private": true,
   "license": "MIT",
   "scripts": {
+    "start:dev": "webpack-dev-server --watch",
     "watch": "webpack --watch",
     "build": "webpack"
   },
   "devDependencies": {
     "css-loader": "^3.5.3",
+    "eslint": "^6.8.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.20.2",
+    "file-loader": "^6.0.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.0",
     "three": "^0.115.0",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
+  },
+  "dependencies": {
+    "eslint-config-airbnb-base": "^14.1.0"
   }
 }
